--- a/src/components/ListItem.module.css
+++ b/src/components/ListItem.module.css
@@ -1,9 +1,9 @@
 .listItem {
-  width: 1450px;
+  width: 1500px;
   display: flex;
   justify-content: center;
-  margin: 0 auto;
   position: relative;
+  left: 0;
   top: 49px;
   background-color: #f4f4f4;
 }
@@ -12,12 +12,10 @@
   width: 100%;
   height: 50px;
   display: flex;
-
   align-items: center;
   color: #53566d;
   font-size: 14px;
   justify-content: center;
-  position: relative;
   font-weight: 400;
   border: 1px solid #dddddd;
 }
@@ -31,14 +29,9 @@
   font-weight: bold;
 }
 
-.countryName::before {
-  content: attr(data-content);
-  position: absolute;
+.listItem span {
+  width: 30%;
   border: 1px solid #dddddd;
-  width: 30px;
-  height: 50px;
-  left: -2rem;
-
   display: flex;
   justify-content: center;
   align-items: center;
